syntax = "proto3";
package protobuffs;
option go_package = "./;protobuffs";

service Booker {
    rpc BookDvd (BookingRequest) returns (BookingResponse) {}
}

message BookingRequest {
    BasicRequest basicRequest = 1;
}

message BookingResponse {
    BasicResponse basicResponse = 1;
}