syntax = "proto3";
package protobuffs;
option go_package = "./;protobuffs";

service CancelBooking {
    rpc CancelBooking (CancelRequest) returns (CancelResponse) {}
}

message CancelRequest {
    BasicRequest basicRequest = 1;
}

message CancelResponse {
    BasicResponse basicResponse = 1;
}